# Virtual-Try-On-2D

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  report-14.txt  report-15.txt  report-16.txt  report-2.txt  report-3.txt  report-5.txt  report-8.txt
.github/workflows/: ci.yml
docs/docs/: api.md  architecture.md  business.md  datasets.md  evaluation.md  hardware.md  models.md  orchestrator.md  pipeline.md  progress.md  risks.md  roadmap.md  security.md  tech-stack.md  virtual-tryon-masterpiece.html
reports/: report-1.txt  report-10.txt  report-11.txt  report-12.txt  report-13.txt  report-4.txt  report-6.txt  report-7.txt  report-9.txt
scripts/: benchmark.py  download_weights.py  evaluate.py
src/vto/: config.py  main.py
src/vto/api/: deps.py  exceptions.py
src/vto/api/routes/: garments.py  health.py  jobs.py  tryon.py
src/vto/api/schemas/: common.py  garments.py  jobs.py  tryon.py
src/vto/core/: cache.py  normalizer.py  router.py  storage.py  vram_manager.py
src/vto/db/: models.py  session.py
src/vto/pipeline/: context.py  postprocess.py  runner.py
src/vto/pipeline/models/: base.py  catvton.py  idm_vton.py  mock.py
tests/: conftest.py
tests/integration/: test_error_handling.py  test_garments_api.py  test_health_api.py  test_tryon_api.py
tests/unit/: test_cache.py  test_context.py  test_normalizer.py  test_preprocessors.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: footer.tsx  hero.tsx  navbar.tsx  try-on-studio.tsx
(+12 files in other folders)
